added verify to tests